--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,9 +11,13 @@
 <div class="container row">
     {% for entreprise in entreprises %}
     <div class="col-md-4">
-        <div class="card">
+        <div class="card text-white bg-primary mb-3">
+            <div class="card-header">
+                <h3>{{ entreprise }}</h3>
+            </div>
             <div class="card-body">
-                <h5 class="card-title">{{ entreprise.name }}</h5>
+                <h5 class="card-title">{{counts[entreprise.id]}} PFE(s)</h5>
+
             </div>
         </div>
     </div>
